# retrieval-augmented-generation

./: .gitignore  README.md  embed.py  generate.py  ingest.py  main.py  pyproject.toml  requirements.txt  retrieve.py  store.py
rag/: config.py  pipeline.py  query_engine.py
rag/api/: app.py  schemas.py
rag/api/routers/: documents.py  query.py
rag/generation/: generator.py
rag/ingestion/: base.py  chunker.py  docx.py  pdf.py  registry.py  txt.py  web.py
rag/storage/: document_store.py  vector_store.py
