[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pypdf==5.4.0",
    "nltk",
    "openai",
    "anthropic",
    "python-dotenv",
    "faiss-cpu",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
    "cohere>=5.0",
    "trafilatura>=1.9",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]
